[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1.0.0"
maintainers = [
  { name="Roberto Vasquez Martinez", email="roberto@lancaster.ac.uk" },
]
authors = [
  { name="Roberto Vasquez Martinez", email="roberto@lancaster.ac.uk"},
]
license={file="LICENSE"}
description = "Implementation of value iteration algorithm for obtaining the optimal policy of a Markov Decision Process."
readme = "README.md"
requires-python = ">=3.10"
keywords=["value iteration", "Markov Decision Process"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/robervz22/value_iteration"
